--- a/style.css
+++ b/style.css
@@ -1,5 +1,26 @@
+header{
+  text-align: center;
+}
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
+}
+
+#featured-property{
+  text-align: center;
+  width:800px;
+  font-size: smaller;
+}
+
+#details{
+  padding: 10px;
+  background-color: aqua;
+  text-align: center;
+  display: flex;
+  margin: auto;
+}
+div{
+  float:left;
 }
